--- a/manuscripts/23-tutorial-don-dags/24-aug-revised-causal-tutorial-env.qmd
+++ b/manuscripts/23-tutorial-don-dags/24-aug-revised-causal-tutorial-env.qmd
@@ -162,18 +162,17 @@ A clear causal question, framed as a counterfactual contrast—also known as a "
 
 Now, imagine — hypothetically and ethically— that we could randomise individuals to high or low green space access. Even in this ideal experimental setup, causal inference faces a considerable challenge: missing data for potential outcomes. For each person, only one potential outcome is observed, depending on the treatment they receive. The outcome they would have experienced under the alternative treatment is unobserved—the counterfactual. Such missingness is the fundamental problem of causal inference, raised to the level of treatment groups. only observe $Y_i(1)$ for individuals with $A_i = 1$ and $Y_i(0)$ for individuals with $A_i = 0$. The other potential outcome for each individual remains unobserved.  However, although this missingness in the "full data" poses a challenge at the individual level, we can estimate the average treatment effect within the sampled population without needing to observe all individual-level treatment effects. 
 
-How do experiments overcome the fundamental problem of causal inference to obtain causal effect estimates?Experiments do not solve the fundamental problem of causal inference but rather shift causal questions from individual causal effects to average causal effects in a population. Understanding causal inference in experiments illustrates how three core assumptions essential for estimating causal effects are resolved when we shift the question from individuals to populations. These are the (1) Conditional Exchangeability Assumptions (2) The Causal Consistency Assumptions; (3) The Positivity Assumption. We next consider each in turn.
+Although individual causal effects are generally elusive, we can recover causal effect estimates by changing our causal question. For example, although randomised controlled experiments do not solve the fundamental problem of causal inference at the level of individuals, however randomised controlled experiments may obtain consistent causal effect estimates for average treatment effects at the level of populations. Randomised experiments solve the missing data problem at the heart of causal inference by satisifying three fundamental assumptions required for obtaining average treatment effects. These are the (1) Conditional Exchangeability Assumptions (2) The Causal Consistency Assumptions; (3) The Positivity Assumption. We call an "observational study" one in which the data have not been obtained by randomised treatment assignment and controlled administration of treatment. We then consider how when observational studies satisfy the three fundamental assumptions of causal inference investigators may obtain consistent causal effect estimates for average treatment effects.
 
 #### Assumption 1: Conditional Exchangeability
 
-We define 
-
-In the first instance, randomisation allows us to identify average treatment effects by ruling out any inherent differences in the groups that would make them to respond differently, on average, to the treatments we seek to contrast. First, we define the expected value of a treatment as the sum of individual potential outcomes for individuals within a specified population:
+First, we define the expected value of a treatment $A=a$ as the sum of individual counterfactual (or equivalently) "potential" outcomes for individuals within a specified population.
 
 $$
 \mathbb{E}[Y(a)] \equiv \frac{1}{n} \sum_{i=1}^n Y_i(a)
 $$
 
+Note that in causal inference, we assume these potential outcomes to be real, even if determined stochastically.
 
 We next define the average treatement effect (ATE) as a contrast between the averages of the potential outcomes in each treatment condition.
 $$
